# projetfilrouge

./: README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_training.yml
data/01_raw/: hardiness_impute.csv  plant_details_all.csv  type_impute.csv
data/04_feature/: recommendation_dataset.pq
data/05_model_input/: fausses_donnees_utilisateur.csv
data/06_models/: recommendation_preprocessor.pickle
data/06_models/nn.pickle/2025-03-20T00.46.15.203Z/: nn.pickle
data/07_model_output/: recommendations.csv
notebooks/: 1.0-data-exploration.ipynb  1.1-knn_reco_algo.ipynb
src/plant_recommendation/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/plant_recommendation/pipelines/data_processing/: __init__.py  pipeline.py
src/plant_recommendation/pipelines/data_processing/nodes/: features_engineering.py  nodes.py
src/plant_recommendation/pipelines/data_processing/nodes/features_cleaning/: clean_feature_hardiness.py  clean_feature_maintenance.py  clean_feature_sunlight.py  clean_feature_type.py  clean_features.py
src/plant_recommendation/pipelines/predict/: __init__.py  nodes.py  pipeline.py
src/plant_recommendation/pipelines/training/: __init__.py  nodes.py  pipeline.py
